# lokinet-win32

./: .gitmodules  CMakeLists.txt  readme.md
include/: lokinet_wfp.hpp
src/: lokinet_wfp.cpp
